Update README with instructions

--- a/README
+++ b/README
@@ -1,1 +1,9 @@
-VIM configuration files, colorschemes and plugins
+# Tool configuration files
+
+## Install 
+
+* clone directly under home directory:
+     cd ~
+     git clone https://github.com/kixx/dotfiles/
+* use `stow` to install symlinks
+
